--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
-html,body {
+html,
+body {
     border: 0;
     margin: 0;
     padding: 0;
-    font: 14px Lucida Grande,Helvetica,Arial,sans-serif
+    font: 14px Lucida Grande, Helvetica, Arial, sans-serif
 }
 
-header,main {
+header,
+main {
     padding: 24px 36px
 }
 
@@ -16,7 +18,7 @@ main {
 header {
     color: #eee;
     background: #333;
-    font-family: Consolas,monospace
+    font-family: Consolas, monospace
 }
 
 table {
@@ -27,7 +29,8 @@ tr:nth-child(2n) {
     background: #eee
 }
 
-th,td {
+th,
+td {
     border: 1px solid #ddd;
     padding: 8px
 }
