--- a/index.css
+++ b/index.css
@@ -3,7 +3,8 @@ body {
     border: 0;
     margin: 0;
     padding: 0;
-    font: 14px Lucida Grande, Helvetica, Arial, sans-serif
+    font: 14px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 header,
