--- a/index.css
+++ b/index.css
@@ -4,7 +4,8 @@ body {
     margin: 0;
     padding: 0;
     font: 14px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #444;
 }
 
 header,
