--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@ body {
     padding: 0;
     font: 14px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #444;
 }
 
 header,
@@ -19,7 +18,7 @@ main {
 
 header {
     color: #eee;
-    background: #333;
+    background-color: #444;
     font-family: Consolas, monospace
 }
 
@@ -28,12 +27,12 @@ table {
 }
 
 tr:nth-child(2n) {
-    background: #eee
+    background-color: #444;
 }
 
 th,
 td {
-    border: 1px solid #ddd;
+    border: 1px solid #444;
     padding: 8px
 }
 
