--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ main {
 
 header {
     color: #eee;
-    background-color: #444;
+    background: #333;
     font-family: Consolas, monospace
 }
 
@@ -27,12 +27,12 @@ table {
 }
 
 tr:nth-child(2n) {
-    background-color: #444;
+    background: #eee
 }
 
 th,
 td {
-    border: 1px solid #eee;
+    border: 1px solid #ddd;
     padding: 8px
 }
 
