--- a/index.css
+++ b/index.css
@@ -1,43 +1,53 @@
 html,
 body {
-    border: 0;
-    margin: 0;
-    padding: 0;
-    font: 14px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  font: 14px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 header,
 main {
-    padding: 24px 36px;
+  padding: 24px 36px;
 }
 
 main {
-    display: block;
-    background-color: #444;
+  display: block;
+  background-color: #444;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  color: #eee;
 }
 
 header {
-    color: #eee;
-    background-color: #333;
-    font-family: Consolas, monospace;
+  color: #eee;
+  background-color: #333;
+  font-family: Consolas, monospace;
 }
 
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
 
 tr:nth-child(2n) {
-    background-color: #eee;
+  background-color: #eee;
 }
 
 th,
 td {
-    background-color: #eee;
-    border: 1px solid #ddd;
-    padding: 8px;
+  background-color: #eee;
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
 td:first-child {
-    text-align: left;
+  text-align: left;
 }
