--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   font: 14px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #444;
 }
 
 header,
