--- a/index.css
+++ b/index.css
@@ -6,6 +6,9 @@ body {
   font: 14px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #444;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 header,
