--- a/index.css
+++ b/index.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
+
 html,
 body {
   border: 0;
   margin: 0;
   padding: 0;
   font: 14px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: 'Nanum Pen Script', cursive;
   background-color: #444;
   text-align: center;
 }
