--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
   /* font-family: "Nanum Pen Script", cursive; */
   /* font-family: 'Indie Flower', cursive !important; */
   font-family: 'Karla', sans-serif !important;
-  background-color: #0a0a0a;
+  background-color: #1D1D1D;
   text-align: center;
 }
 
